# UniversalTelegramExporter

./: .gitignore  LICENSE  README.md  config.yaml.example  main.py  pyproject.toml
.config_backups/: config.yaml.backup.20260111_173402
config/: logging.yaml
tests/: test_media_downloader.py  test_message_export.py
tests/utils/: test_meta.py  test_updates.py
utils/: __init__.py  config_manager.py  error_handler.py  errors.py  file_management.py  logging_config.py  message_export.py  models.py  state.py  updates.py  validators.py
